java: WinResourcesFileSystem